kustomization/overlays/prod/tandoor/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    hogs.tswn.us/api-server-client: "true"
    hogs.tswn.us/traefik-route: "true"
  name: this-is-ignored-but-is-required
