kustomization/overlays/prod/tandoor/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: auth-forwardauth-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: tandoor-ingress
spec:
  rules:
    - host: recipes.tswn.us
      http:
        paths:
          - backend:
              service:
                name: tandoor-svc
                port:
                  name: web
            path: /
            pathType: Prefix
